Optional command line args for gunicorn

--- a/env.template
+++ b/env.template
@@ -5,7 +5,12 @@ VITE_ALLOWED_HOSTS=false
 
 # Gunicorn (optional)
 # Workers -> (2 × CPU cores) + 1
-WEB_CONCURRENCY=4
+GUNICORN_WORKERS=
+GUNICORN_TIMEOUT=
+GUNICORN_KEEP_ALIVE=
+GUNICORN_MAX_REQUESTS=
+GUNICORN_MAX_REQUESTS_JITTER=
+GUNICORN_WORKER_CONNECTIONS=
 
 # IGDB credentials
 IGDB_CLIENT_ID=
