--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,13 @@ services:
     environment:
       - REDIS_HOST=romm-valkey-dev
       - DB_HOST=${DB_HOST:-romm-db-dev}
+      - DB_NAME=${DB_NAME:-romm}
+      - DB_USER=${DB_USER:-romm}
+      - DB_PASSWD=${DB_PASSWD:-romm}
+      - ROMM_AUTH_SECRET_KEY=${ROMM_AUTH_SECRET_KEY:-secret-key-default}
       - ROMM_BASE_PATH=/app/romm
+      - DEV_HOST=0.0.0.0
+      - DEV_PORT=5000
     ports:
       - "3000:3000" # Frontend dev server
       - "${DEV_PORT:-8000}:5000" # Backend API
@@ -25,9 +31,9 @@ services:
       - romm-db-dev
       - romm-valkey-dev
       - romm-postgres-dev
-    command: /bin/bash -c "cd /app && bash"
-    stdin_open: true
-    tty: true
+    command: /bin/bash -c "cd /app/backend && source ../.venv/bin/activate && python main.py"
+    stdin_open: false
+    tty: false
 
   romm-db-dev:
     image: mariadb:11.3.2
